<resources>
    <string name="app_name">Location Trail</string>
    <string name="title_activity_maps">Map</string>
    <string name="update">Update</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="button">Home</string>
    <string name="enter_mobile_number">Mobile Number</string>
    <string name="find_location">Show location on map</string>
    <string name="show_location_trail">Show Location Trail</string>
    <string name="location_trail">Location Trail</string>
    <string name="demo">demo</string>
    <string name="otp"> Enter OTP</string>
    <string name="create_account">Create Account</string>
    <string name="send_otp">Send OTP</string>
    <string name="show_nearby_devices">Show nearby devices</string>
    <string name="title_activity_maps2">Map</string>

</resources>
