<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:gravity="center"
    android:orientation="vertical"
    >
    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/animation"
        app:lottie_loop="true"
        android:layout_weight="30"
        app:lottie_fileName="data.json"
        app:lottie_autoPlay="true"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Spinner
            android:id="@+id/spinnerCountries"
            android:layout_width="100dp"
            android:layout_marginStart="50dp"
            android:layout_height="match_parent"/>

        <EditText
            android:id="@+id/number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="50dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:background="@drawable/edit_round"
            android:focusedByDefault="true"
            android:gravity="center"
            android:hint="@string/enter_mobile_number"
            android:inputType="number"
            android:padding="15dp"
            android:textSize="20sp" />
    </LinearLayout>

    <Button
        android:id="@+id/otp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@drawable/button_round"
        android:textColor="#ffffff"
        android:layout_weight="1"
        android:textSize="20sp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:textAllCaps="false"
        android:text="@string/send_otp" />

    <Button
        android:id="@+id/find"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@drawable/button_round"
        android:textColor="#ffffff"
        android:layout_weight="1"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/find_location" />

    <Button
        android:id="@+id/trail"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:background="@drawable/button_round"
        android:textColor="#ffffff"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="50dp"
        android:text="@string/show_nearby_devices" />

</LinearLayout>