<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    tools:context=".Trail"
    android:padding="7dp">

   <TextView
       android:id="@+id/mn"
       android:textAppearance="@style/TextAppearance.AppCompat.Large"
       android:layout_width="match_parent"
       android:text="@string/demo"
       android:layout_height="wrap_content"
       android:gravity="center"
       android:padding="10dp"
       android:layout_marginTop="10dp"/>


   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal">

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:gravity="center"
          android:padding="10dp"
          android:layout_marginTop="10dp"
          android:textColor="#250857"
          android:textStyle="bold"
          android:textSize="17dp"
          android:text="@string/latitude"
          android:textAppearance="@style/TextAppearance.AppCompat" />

      <TextView
          android:layout_marginTop="10dp"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:gravity="center"
          android:textColor="#250857"
          android:textStyle="bold"
          android:padding="10dp"
          android:textSize="17dp"
          android:text="@string/longitude"
          android:textAppearance="@style/TextAppearance.AppCompat" />
      <TextView
          android:layout_marginTop="10dp"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:gravity="center"
          android:textColor="#250857"
          android:textSize="17dp"
          android:textStyle="bold"
          android:padding="10dp"
          android:text="Date-Time"
          android:textAppearance="@style/TextAppearance.AppCompat" />
   </LinearLayout>

   <ListView
       android:id="@+id/listView"
       android:layout_marginTop="15dp"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:background="@drawable/edit_round"
       android:drawSelectorOnTop="true"
       android:cacheColorHint="@android:color/transparent"
       >

   </ListView>
</LinearLayout>