<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MapsActivity"
    android:layout_gravity="center"
    android:orientation="vertical">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MapsActivity"
        android:layout_weight="2"
        tools:layout="@android:layout/simple_spinner_dropdown_item" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:autofillHints=""
            android:gravity="center"
            android:ems="10"
            android:background="@drawable/edit_round"
            android:layout_weight="1"
            android:hint="Your current location is:" />


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:id="@+id/editTextLatitude"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:autofillHints=""
                    android:gravity="center"
                    android:ems="10"
                    android:background="@drawable/edit_round"
                    android:layout_weight="1"
                    android:hint="@string/latitude"
                    android:inputType="textPersonName" />

                <TextView
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:id="@+id/editTextLongitude"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_round"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:gravity="center"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/longitude"
                    android:inputType="textPersonName" />
        </LinearLayout>
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


            <Button
                android:id="@+id/home"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:background="@drawable/button_round"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_marginBottom="40dp"
                android:text="@string/show_location_trail" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>